Fix restoring layer's properties after new-layer-from-visible action

BUG:478225